# ComputerVision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  main.cpp  projectmilestone.txt
Pictures/: csv.py  path_to_created_csv_file.csv  test.py
datastructures/: ImageQueue.cpp  ImageQueue.hpp
platform/: DisplayWindow.cpp  DisplayWindow.hpp  FrameMonitor.cpp  FrameMonitor.hpp
tools/: Hog.cpp  Hog.hpp  ViolaJones.cpp  ViolaJones.hpp
